MDMA-13 Fixed validation icon overlap with value, bold header section

--- a/assets/sass/base/_form-placeholder.scss
+++ b/assets/sass/base/_form-placeholder.scss
@@ -32,6 +32,7 @@ $form-border-color: #515151;
         border-right: 0.1rem solid $form-border-color;
         background: #323031;
         text-align: center;
+        font-weight: 600;
 
         hr {
             display: none;
